# swagger.json
@@ -388,24 +388,18 @@
   },
   "components": {
     "securitySchemes": {
-      "GitHubAuth": {
+      "GitHubOAuth": {
         "type": "oauth2",
-        "description": "OAuth2 authentication with GitHub",
         "flows": {
           "authorizationCode": {
             "authorizationUrl": "https://github.com/login/oauth/authorize",
             "tokenUrl": "https://github.com/login/oauth/access_token",
             "scopes": {
-              "user": "Access your GitHub profile"
+              "user:email": "Access your email address"
             }
           }
         }
       }
     }
-  },
-  "security": [
-    {
-      "githubOAuth": []
-    }
-  ]
+  }
 }
